compiler-design-lab/Assignment6(17092020)/y.output
Terminals unused in grammar

    TAB


Grammar

    0 $accept: P $end

    1 P: A P
    2  | B P
    3  | I P
    4  | A
    5  | B
    6  | I

    7 A: article_blk BLK1

    8 B: book_blk BLK2

    9 I: inproceeding_blk BLK3

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

   13 STEXT: full
   14      | minimal
   15      | crossref
   16      | journal


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    article_blk (258) 7
    book_blk (259) 8
    inproceeding_blk (260) 9
    article (261) 10
    title (262) 10 11 12
    journal (263) 10 16
    year (264) 10 12
    page (265) 10
    volume (266) 11
    publisher (267) 11 12
    editor (268) 12
    series (269) 12
    full (270) 13
    minimal (271) 14
    crossref (272) 15
    NL (273) 10 11 12
    TAB (274)
    OPEN (275) 10 11 12
    CLOSE (276) 10 11 12
    EQ (277) 10 11 12
    COMMA (278) 10 11 12
    HYPHEN (279) 10 11 12
    NUMBER (280) 10 11 12
    author (281) 10 11 12
    ALPHANUM (282) 10 11 12
    book (283) 11
    inproceedings (284) 12


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    P (31)
        on left: 1 2 3 4 5 6
        on right: 0 1 2 3
    A (32)
        on left: 7
        on right: 1 4
    B (33)
        on left: 8
        on right: 2 5
    I (34)
        on left: 9
        on right: 3 6
    BLK1 (35)
        on left: 10
        on right: 7
    BLK2 (36)
        on left: 11
        on right: 8
    BLK3 (37)
        on left: 12
        on right: 9
    STEXT (38)
        on left: 13 14 15 16
        on right: 10 11 12


State 0

    0 $accept: . P $end

    article_blk       shift, and go to state 1
    book_blk          shift, and go to state 2
    inproceeding_blk  shift, and go to state 3

    P  go to state 4
    A  go to state 5
    B  go to state 6
    I  go to state 7


State 1

    7 A: article_blk . BLK1

    OPEN  shift, and go to state 8

    BLK1  go to state 9


State 2

    8 B: book_blk . BLK2

    OPEN  shift, and go to state 10

    BLK2  go to state 11


State 3

    9 I: inproceeding_blk . BLK3

    OPEN  shift, and go to state 12

    BLK3  go to state 13


State 4

    0 $accept: P . $end

    $end  shift, and go to state 14


State 5

    1 P: A . P
    4  | A .

    article_blk       shift, and go to state 1
    book_blk          shift, and go to state 2
    inproceeding_blk  shift, and go to state 3

    $default  reduce using rule 4 (P)

    P  go to state 15
    A  go to state 5
    B  go to state 6
    I  go to state 7


State 6

    2 P: B . P
    5  | B .

    article_blk       shift, and go to state 1
    book_blk          shift, and go to state 2
    inproceeding_blk  shift, and go to state 3

    $default  reduce using rule 5 (P)

    P  go to state 16
    A  go to state 5
    B  go to state 6
    I  go to state 7


State 7

    3 P: I . P
    6  | I .

    article_blk       shift, and go to state 1
    book_blk          shift, and go to state 2
    inproceeding_blk  shift, and go to state 3

    $default  reduce using rule 6 (P)

    P  go to state 17
    A  go to state 5
    B  go to state 6
    I  go to state 7


State 8

   10 BLK1: OPEN . article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    article  shift, and go to state 18


State 9

    7 A: article_blk BLK1 .

    $default  reduce using rule 7 (A)


State 10

   11 BLK2: OPEN . book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    book  shift, and go to state 19


State 11

    8 B: book_blk BLK2 .

    $default  reduce using rule 8 (B)


State 12

   12 BLK3: OPEN . inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    inproceedings  shift, and go to state 20


State 13

    9 I: inproceeding_blk BLK3 .

    $default  reduce using rule 9 (I)


State 14

    0 $accept: P $end .

    $default  accept


State 15

    1 P: A P .

    $default  reduce using rule 1 (P)


State 16

    2 P: B P .

    $default  reduce using rule 2 (P)


State 17

    3 P: I P .

    $default  reduce using rule 3 (P)


State 18

   10 BLK1: OPEN article . HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    HYPHEN  shift, and go to state 21


State 19

   11 BLK2: OPEN book . HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    HYPHEN  shift, and go to state 22


State 20

   12 BLK3: OPEN inproceedings . HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    HYPHEN  shift, and go to state 23


State 21

   10 BLK1: OPEN article HYPHEN . STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    journal   shift, and go to state 24
    full      shift, and go to state 25
    minimal   shift, and go to state 26
    crossref  shift, and go to state 27

    STEXT  go to state 28


State 22

   11 BLK2: OPEN book HYPHEN . STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    journal   shift, and go to state 24
    full      shift, and go to state 25
    minimal   shift, and go to state 26
    crossref  shift, and go to state 27

    STEXT  go to state 29


State 23

   12 BLK3: OPEN inproceedings HYPHEN . STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    journal   shift, and go to state 24
    full      shift, and go to state 25
    minimal   shift, and go to state 26
    crossref  shift, and go to state 27

    STEXT  go to state 30


State 24

   16 STEXT: journal .

    $default  reduce using rule 16 (STEXT)


State 25

   13 STEXT: full .

    $default  reduce using rule 13 (STEXT)


State 26

   14 STEXT: minimal .

    $default  reduce using rule 14 (STEXT)


State 27

   15 STEXT: crossref .

    $default  reduce using rule 15 (STEXT)


State 28

   10 BLK1: OPEN article HYPHEN STEXT . COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    COMMA  shift, and go to state 31


State 29

   11 BLK2: OPEN book HYPHEN STEXT . COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    COMMA  shift, and go to state 32


State 30

   12 BLK3: OPEN inproceedings HYPHEN STEXT . COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    COMMA  shift, and go to state 33


State 31

   10 BLK1: OPEN article HYPHEN STEXT COMMA . NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    NL  shift, and go to state 34


State 32

   11 BLK2: OPEN book HYPHEN STEXT COMMA . NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    NL  shift, and go to state 35


State 33

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA . NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    NL  shift, and go to state 36


State 34

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL . author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    author  shift, and go to state 37


State 35

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL . author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    author  shift, and go to state 38


State 36

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL . author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    author  shift, and go to state 39


State 37

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author . EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    EQ  shift, and go to state 40


State 38

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author . EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    EQ  shift, and go to state 41


State 39

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author . EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    EQ  shift, and go to state 42


State 40

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ . OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    OPEN  shift, and go to state 43


State 41

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ . OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    OPEN  shift, and go to state 44


State 42

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ . OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    OPEN  shift, and go to state 45


State 43

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN . ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    ALPHANUM  shift, and go to state 46


State 44

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN . ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    ALPHANUM  shift, and go to state 47


State 45

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN . ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    ALPHANUM  shift, and go to state 48


State 46

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM . CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    CLOSE  shift, and go to state 49


State 47

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM . CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    CLOSE  shift, and go to state 50


State 48

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM . CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    CLOSE  shift, and go to state 51


State 49

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE . COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    COMMA  shift, and go to state 52


State 50

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE . COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    COMMA  shift, and go to state 53


State 51

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE . COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    COMMA  shift, and go to state 54


State 52

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA . NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    NL  shift, and go to state 55


State 53

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA . NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    NL  shift, and go to state 56


State 54

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA . NL title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    NL  shift, and go to state 57


State 55

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL . title EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    title  shift, and go to state 58


State 56

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL . title EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    title  shift, and go to state 59


State 57

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL . title EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    title  shift, and go to state 60


State 58

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title . EQ OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    EQ  shift, and go to state 61


State 59

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title . EQ OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    EQ  shift, and go to state 62


State 60

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title . EQ OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    EQ  shift, and go to state 63


State 61

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ . OPEN ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    OPEN  shift, and go to state 64


State 62

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ . OPEN ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    OPEN  shift, and go to state 65


State 63

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ . OPEN ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    OPEN  shift, and go to state 66


State 64

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN . ALPHANUM CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    ALPHANUM  shift, and go to state 67


State 65

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN . ALPHANUM CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    ALPHANUM  shift, and go to state 68


State 66

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN . ALPHANUM CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    ALPHANUM  shift, and go to state 69


State 67

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM . CLOSE COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    CLOSE  shift, and go to state 70


State 68

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM . CLOSE COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    CLOSE  shift, and go to state 71


State 69

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM . CLOSE COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    CLOSE  shift, and go to state 72


State 70

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE . COMMA NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    COMMA  shift, and go to state 73


State 71

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE . COMMA NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    COMMA  shift, and go to state 74


State 72

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE . COMMA NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    COMMA  shift, and go to state 75


State 73

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA . NL journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    NL  shift, and go to state 76


State 74

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA . NL volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    NL  shift, and go to state 77


State 75

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA . NL editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    NL  shift, and go to state 78


State 76

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL . journal EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    journal  shift, and go to state 79


State 77

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL . volume EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    volume  shift, and go to state 80


State 78

   12 BLK3: OPEN inproceedings HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL . editor EQ OPEN ALPHANUM CLOSE COMMA NL series EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    editor  shift, and go to state 81


State 79

   10 BLK1: OPEN article HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL journal . EQ OPEN ALPHANUM CLOSE COMMA NL year EQ NUMBER COMMA NL page EQ NUMBER COMMA NL CLOSE NL

    EQ  shift, and go to state 82


State 80

   11 BLK2: OPEN book HYPHEN STEXT COMMA NL author EQ OPEN ALPHANUM CLOSE COMMA NL title EQ OPEN ALPHANUM CLOSE COMMA NL volume . EQ NUMBER COMMA NL publisher EQ OPEN ALPHANUM CLOSE COMMA NL CLOSE NL

    EQ  shift, and go to state 83


State 81
